# pollytrade

./: .editorconfig  .gitignore  001_initial_collections.js  002_seed_default_admin-example-llm.md  Dockerfile  Makefile  Plan-llm.txt  README.md  angular-llm.txt  pocketbase-llm.txt
apps/frontend/: .postcssrc.json  Dockerfile  nginx.conf  package-lock.json  package.json
apps/frontend/src/app/: app.routes.ts  app.ts
apps/frontend/src/app/pages/setup/: setup.ts  (+1 more)
apps/frontend/src/environments/: environment.prod.ts  environment.ts
apps/pocketbase/: Dockerfile
apps/pocketbase/pb_migrations/: 001_trading_collections.js  002_seed_defaults.js  003_seed_strategies.js  004_open_api_rules.js
apps/trading-engine/: .dockerignore  Dockerfile  pyproject.toml
apps/trading-engine/app/: config.py  main.py
apps/trading-engine/app/analysis/: game_theory.py  statistics.py  technical.py  volatility.py
apps/trading-engine/app/risk/: circuit_breaker.py  gate.py  kelly.py
apps/trading-engine/app/services/: engine.py  market_discovery.py  pocketbase.py
apps/trading-engine/app/signals/: generator.py
apps/trading-engine/app/trading/: adapter.py  live.py  paper.py
apps/trading-engine/app/ws/: consumer.py  polymarket_stream.py
apps/trading-engine/tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_engine.py  test_game_theory.py  test_kelly.py  test_market_discovery.py  test_paper_trading.py  test_risk_gate.py  test_statistics.py  test_volatility.py
docker/: .env.example  docker-compose.yml  nginx.conf  supervisord.conf
scripts/: generate-types.sh  setup.sh
(+17 files in other folders)
