[project]
name = "polymarket-trading-engine"
version = "0.1.0"
description = "Polymarket prediction market trading engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "uvloop>=0.21.0",
    "websockets>=14.0",
    "py-clob-client>=0.34.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "arch>=7.0.0",
    "nashpy>=0.0.43",
    "empyrical-reloaded>=0.5.0",
    "ta-lib>=0.6.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
